// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalizedText schema (0) match fails for invalid config -> empty: empty 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'locale'[39m
[31m    Path:     LocalizedText.schema.json#/required[39m
[31m[39m[31m  must have required property 'text'[39m
[31m    Path:     LocalizedText.schema.json#/required[39m
[31m[39m"
`;

exports[`LocalizedText schema (1) match fails for invalid config -> Invalid Locale: Invalid Locale 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  /locale must match pattern \\"^[A-z]{2}(-[A-z]{2,3})?$\\"[39m
[31m    Received: [33m<string>[39m[31m ene[39m
[31m    Path:     LocalizedText.schema.jsonconstants/locale.pattern.schema.json/pattern[39m
[31m[39m"
`;

exports[`LocalizedText schema (2) match fails for invalid config -> Invalid Locale: Invalid Locale 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  /locale must match pattern \\"^[A-z]{2}(-[A-z]{2,3})?$\\"[39m
[31m    Received: [33m<string>[39m[31m en-USofA[39m
[31m    Path:     LocalizedText.schema.jsonconstants/locale.pattern.schema.json/pattern[39m
[31m[39m"
`;

exports[`LocalizedText schema (3) match fails for invalid config -> Invalid Text: Invalid Text 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  /text must NOT have fewer than 1 characters[39m
[31m    Received: [33m<empty string>[39m[31m[39m
[31m    Path:     LocalizedText.schema.json#/properties/text/minLength[39m
[31m[39m"
`;

exports[`LocalizedText schema (4) match fails for invalid config -> missing locale: missing locale 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'locale'[39m
[31m    Path:     LocalizedText.schema.json#/required[39m
[31m[39m"
`;

exports[`LocalizedText schema (5) match fails for invalid config -> empty locale & text: empty locale & text 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  /locale must match pattern \\"^[A-z]{2}(-[A-z]{2,3})?$\\"[39m
[31m    Received: [33m<empty string>[39m[31m[39m
[31m    Path:     LocalizedText.schema.jsonconstants/locale.pattern.schema.json/pattern[39m
[31m[39m[31m  /text must NOT have fewer than 1 characters[39m
[31m    Received: [33m<empty string>[39m[31m[39m
[31m    Path:     LocalizedText.schema.json#/properties/text/minLength[39m
[31m[39m"
`;

exports[`LocalizedText schema (6) match fails for invalid config -> missing text: missing text 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'text'[39m
[31m    Path:     LocalizedText.schema.json#/required[39m
[31m[39m"
`;
